Overlapping of inforbar and kvpbar with header and content solved
Ticket: none

--- a/pub/System/FlatSkinPlugin/src/scss/qwiki/_genericbar.scss
+++ b/pub/System/FlatSkinPlugin/src/scss/qwiki/_genericbar.scss
@@ -41,11 +41,13 @@
     &.leftbar {
       @media #{$medium-only} {
         transform: translate3d( $qw-leftbar-width-expanded, 0, 0 );
+        right: -55px;
       }
 
       @media #{$large-up} {
         $offset: rem-calc($qw-leftbar-width-expanded) - 2 * $qw-content-padding;
         transform: translate3d( $offset, 0, 0 );
+        right: -55px;
       }
     }
   }
